--- a/notebooks/38-sklearn-nearest-neighbor.ipynb
+++ b/notebooks/38-sklearn-nearest-neighbor.ipynb
@@ -219,7 +219,8 @@
     "* We learned the workflow of machine learning\n",
     "* We learned the concept of *k* nearest neighbor\n",
     "* We learned how to split our data into train and test\n",
-    "* We learned how to evaluate our model with *score* method"
+    "* We learned how to evaluate our model with *score* method\n",
+    "* We learned various kinds of distrances namely, minkowski, euclidean, and manhattan"
    ]
   }
  ],
