--- a/notebooks/38-sklearn-nearest-neighbor.ipynb
+++ b/notebooks/38-sklearn-nearest-neighbor.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x_iris,y_iris,test_size=0.5,random_state=0)"
+    "x_train, x_test, y_train, y_test = train_test_split(x_iris,y_iris,test_size=0.3,random_state=101, stratify=y_iris)"
    ]
   },
   {
