add kmeans algorithm

--- a/notebooks/41-sklearn-random-forest.ipynb
+++ b/notebooks/41-sklearn-random-forest.ipynb
@@ -231,9 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fi = [bcancer.concavity_worst.name, bcancer.area_worst.name, bcancer.radius_worst.name, bcancer.perimeter_worst.name, 'concave points_mean'\n",
-    "     ,bcancer.perimeter_mean.name]\n",
-    "fi"
+    "fi = rf.feature_importances_.argsort()[-5:]"
    ]
   },
   {
@@ -242,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = bcancer.loc[:,fi]\n",
+    "x = x.iloc[:, fi]\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1, random_state=101, shuffle=True)"
    ]
   },
