--- a/notebooks/43-sklearn-dbscan.ipynb
+++ b/notebooks/43-sklearn-dbscan.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "    <h1 align=\"center\">Scipy Hierarchical Clustering</h1>\n",
+    "    <h1 align=\"center\">SKLearn DBSCAN</h1>\n",
     "    <h3 align=\"center\"> Machine Learning Course</h3>\n",
     "    <h5 align=\"center\">Alireza Aghamohammadi (http://linkedin.com/in/aaghamohammadi)</h5>\n",
     "</div>"
@@ -27,10 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy\n",
-    "from scipy.cluster import hierarchy\n",
-    "from scipy.spatial import distance\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.cluster import DBSCAN"
    ]
   },
   {
@@ -78,26 +75,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies = pd.read_csv(PATH_DATA + \"movie.csv\", )\n",
-    "movies.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = movies.loc[:,[movies.duration.name, movies.gross.name, movies.budget.name, movies.title_year.name]]\n",
-    "x.dropna(inplace=True)\n",
-    "x = x.sample(50)"
+    "iris = pd.read_csv(PATH_DATA + \"iris.csv\")\n",
+    "x = iris.drop(iris.species.name, axis=1)\n",
+    "x.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scale the Data"
+    "#### Train the Model"
    ]
   },
   {
@@ -106,47 +93,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = MinMaxScaler()\n",
-    "feature_mtx = scaler.fit_transform(x.values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Cluster the Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z = hierarchy.linkage(feature_mtx, method='complete')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_d = 5\n",
-    "clusters = hierarchy.fcluster(Z,max_d, criterion='maxclust')\n",
+    "db = DBSCAN(eps=0.5, min_samples=7)\n",
+    "db = db.fit(x)\n",
+    "clusters = db.labels_\n",
     "clusters"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize the Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(18,25), dpi=300)\n",
-    "def llf(id):\n",
-    "    return f\"{movies['director_name'][id]}\"\n",
-    "dendro = hierarchy.dendrogram(Z,  leaf_label_func=llf, leaf_rotation=0, leaf_font_size =12, orientation = 'right')\n",
+    "fig, ax = plt.subplots(dpi=300)\n",
+    "ax.scatter(x.iloc[:,0], x.iloc[:,2], c=clusters)\n",
+    "ax.set_xlabel(\"Sepal Length\")\n",
+    "ax.set_ylabel(\"Petal Length\")\n",
     "fig.show()"
    ]
   },
@@ -161,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We learned the hierarchical clustering"
+    "* We learned the DBSCAN algorithms"
    ]
   }
  ],
