--- a/notebooks/44-sklearn-randorm-forest-regression.ipynb
+++ b/notebooks/44-sklearn-randorm-forest-regression.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "    <h1 align=\"center\">Scipy Hierarchical Clustering</h1>\n",
+    "    <h1 align=\"center\">SKLearn Random Forest Regression</h1>\n",
     "    <h3 align=\"center\"> Machine Learning Course</h3>\n",
     "    <h5 align=\"center\">Alireza Aghamohammadi (http://linkedin.com/in/aaghamohammadi)</h5>\n",
     "</div>"
@@ -27,10 +27,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy\n",
-    "from scipy.cluster import hierarchy\n",
-    "from scipy.spatial import distance\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -78,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies = pd.read_csv(PATH_DATA + \"movie.csv\", )\n",
-    "movies.head()"
+    "house = pd.read_csv(PATH_DATA + \"boston_house_prices.csv\", header=1)\n",
+    "house.head()"
    ]
   },
   {
@@ -88,16 +86,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = movies.loc[:,[movies.duration.name, movies.gross.name, movies.budget.name, movies.title_year.name]]\n",
-    "x.dropna(inplace=True)\n",
-    "x = x.sample(50)"
+    "x = house.drop(house.MEDV.name, axis=1)\n",
+    "y = house.MEDV"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scale the Data"
+    "#### Split Data into Train and Test Sets"
    ]
   },
   {
@@ -106,15 +103,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = MinMaxScaler()\n",
-    "feature_mtx = scaler.fit_transform(x.values)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, shuffle=True, random_state=101, test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_train.shape)\n",
+    "print(x_test.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cluster the Data"
+    "#### Train the Model"
    ]
   },
   {
@@ -123,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z = hierarchy.linkage(feature_mtx, method='complete')"
+    "rf = RandomForestRegressor(n_estimators=200)"
    ]
   },
   {
@@ -132,9 +138,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_d = 5\n",
-    "clusters = hierarchy.fcluster(Z,max_d, criterion='maxclust')\n",
-    "clusters"
+    "rf.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluation"
    ]
   },
   {
@@ -143,11 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(18,25), dpi=300)\n",
-    "def llf(id):\n",
-    "    return f\"{movies['director_name'][id]}\"\n",
-    "dendro = hierarchy.dendrogram(Z,  leaf_label_func=llf, leaf_rotation=0, leaf_font_size =12, orientation = 'right')\n",
-    "fig.show()"
+    "rf.score(x_test, y_test)"
    ]
   },
   {
@@ -161,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We learned the hierarchical clustering"
+    "* We learned the random forest regressor"
    ]
   }
  ],
