--- a/notebooks/45-sklearn-linear-regression.ipynb
+++ b/notebooks/45-sklearn-linear-regression.ipynb
@@ -125,19 +125,8 @@
    "outputs": [],
    "source": [
     "scaler_x = StandardScaler().fit(x_train.values)\n",
-    "x_train = scaler_x.transform(x_train.values)\n",
-    "x_test = scaler_x.transform(x_test.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler_y = StandardScaler().fit(y_train.values.reshape(-1,1))\n",
-    "y_train = scaler_y.transform(y_train.values.reshape(-1,1))\n",
-    "y_test = scaler_y.transform(y_test.values.reshape(-1,1))"
+    "x_train_scaled = scaler_x.transform(x_train.values)\n",
+    "x_test_scaled = scaler_x.transform(x_test.values)"
    ]
   },
   {
@@ -162,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr.fit(x_train, y_train)"
+    "lr.fit(x_train_scaled, y_train)"
    ]
   },
   {
@@ -178,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr.score(x_test, y_test)"
+    "lr.score(x_test_scaled, y_test)"
    ]
   },
   {
@@ -187,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = lr.predict(x_test)\n",
+    "y_pred = lr.predict(x_test_scaled)\n",
     "print(metrics.mean_squared_error(y_test, y_pred))\n",
     "print(metrics.r2_score(y_test, y_pred))"
    ]
